--- a/latex/classFrame.tex
+++ b/latex/classFrame.tex
@@ -2,7 +2,7 @@
 \label{classFrame}\index{Frame@{Frame}}
 
 
-O \mbox{\hyperlink{classFrame}{Frame}} armazena dados e resultados parciais, para executar ligação dinâmica,retornar valores para métodos e disparar exceções.  
+Estrutura de dados que armazena informações e resultados parciais, para executar ligação dinâmica,retornar valores para métodos e disparar exceções.  
 
 
 
@@ -52,7 +52,7 @@ u4 {\bfseries pc}
 
 
 \doxysubsection{Descrição detalhada}
-O \mbox{\hyperlink{classFrame}{Frame}} armazena dados e resultados parciais, para executar ligação dinâmica,retornar valores para métodos e disparar exceções. 
+Estrutura de dados que armazena informações e resultados parciais, para executar ligação dinâmica,retornar valores para métodos e disparar exceções. 
 
 Cada frame possui seu próprio array de variáveis locais, sua pilha de operandos e uma referência para o pool de constantes da classe do método corrente. 
 
