--- a/latex/class__file_8hpp.tex
+++ b/latex/class__file_8hpp.tex
@@ -15,13 +15,13 @@ Estruturas e declarações de funções relacionados com a leitura de dados do a
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structClass__File}{Class\+\_\+\+File}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structClass__File}{Class\+\_\+\+File}} -\/ Estrutura de dados que armazena as principais informações do bytecode (.class) \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena as principais informações do bytecode (.class) \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Definições de tipos}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{class__file_8hpp_a7db9f2215707646c9225f1f44c13e7f3}\label{class__file_8hpp_a7db9f2215707646c9225f1f44c13e7f3}} 
 typedef struct \mbox{\hyperlink{structClass__File}{Class\+\_\+\+File}} \mbox{\hyperlink{class__file_8hpp_a7db9f2215707646c9225f1f44c13e7f3}{Class\+\_\+\+File}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structClass__File}{Class\+\_\+\+File}} -\/ Estrutura de dados que armazena as principais informações do bytecode (.class) \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena as principais informações do bytecode (.class) \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Funções}
 \begin{DoxyCompactItemize}
 \item 
