--- a/latex/cp__info_8hpp.tex
+++ b/latex/cp__info_8hpp.tex
@@ -12,7 +12,7 @@ Estruturas e declarações de funções relacionadas a Constant Pool.
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structCp__Info}{Cp\+\_\+\+Info}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structCp__Info}{Cp\+\_\+\+Info}} -\/ Estrutura de dados que armazena a Constant Pool. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena a Constant Pool. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Funções}
 \begin{DoxyCompactItemize}
 \item 
