--- a/latex/field__info_8hpp.tex
+++ b/latex/field__info_8hpp.tex
@@ -11,13 +11,13 @@ Estruturas e declarações de funções relacionadas a Field.
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structField__Info}{Field\+\_\+\+Info}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structField__Info}{Field\+\_\+\+Info}} -\/ estrutura de dados que armazena os Fields. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena os Fields. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Definições de tipos}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{field__info_8hpp_adcb5800196a8484cc01a20241b54ea9d}\label{field__info_8hpp_adcb5800196a8484cc01a20241b54ea9d}} 
 typedef struct \mbox{\hyperlink{structField__Info}{Field\+\_\+\+Info}} \mbox{\hyperlink{field__info_8hpp_adcb5800196a8484cc01a20241b54ea9d}{Field\+\_\+\+Info}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structField__Info}{Field\+\_\+\+Info}} -\/ estrutura de dados que armazena os Fields. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena os Fields. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Funções}
 \begin{DoxyCompactItemize}
 \item 
