--- a/latex/frame_8hpp.tex
+++ b/latex/frame_8hpp.tex
@@ -13,20 +13,20 @@ Estruturas e classes de Frames e Operandos.
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structOperand}{Operand}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structOperand}{Operand}} -\/ Estrutura de dados que armazena um operando. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena um operando. \end{DoxyCompactList}\item 
 struct \mbox{\hyperlink{structArray__Type}{Array\+\_\+\+Type}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structArray__Type}{Array\+\_\+\+Type}} -\/ Estrutura de dados que armazena o tipo do operando. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena o tipo do operando. \end{DoxyCompactList}\item 
 class \mbox{\hyperlink{classFrame}{Frame}}
-\begin{DoxyCompactList}\small\item\em O \mbox{\hyperlink{classFrame}{Frame}} armazena dados e resultados parciais, para executar ligação dinâmica,retornar valores para métodos e disparar exceções. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena informações e resultados parciais, para executar ligação dinâmica,retornar valores para métodos e disparar exceções. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Definições de tipos}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{frame_8hpp_a4fb9f7773235006151182b29febd8be7}\label{frame_8hpp_a4fb9f7773235006151182b29febd8be7}} 
 typedef struct \mbox{\hyperlink{structOperand}{Operand}} \mbox{\hyperlink{frame_8hpp_a4fb9f7773235006151182b29febd8be7}{Operand}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structOperand}{Operand}} -\/ Estrutura de dados que armazena um operando. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena um operando. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{frame_8hpp_a49625761a16c51cce597d9c716d44b7d}\label{frame_8hpp_a49625761a16c51cce597d9c716d44b7d}} 
 typedef struct \mbox{\hyperlink{structArray__Type}{Array\+\_\+\+Type}} \mbox{\hyperlink{frame_8hpp_a49625761a16c51cce597d9c716d44b7d}{Array\+\_\+\+Type}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structArray__Type}{Array\+\_\+\+Type}} -\/ Estrutura de dados que armazena o tipo do operando. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena o tipo do operando. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Funções}
 \begin{DoxyCompactItemize}
 \item 
