--- a/latex/instruction_8hpp.tex
+++ b/latex/instruction_8hpp.tex
@@ -12,7 +12,7 @@ Estruturas, declaração de funções e definições de constanstes relacionadas
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structInstruction}{Instruction}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structInstruction}{Instruction}} -\/ Estrutura de dados que armazena uma \mbox{\hyperlink{structInstruction}{Instruction}}. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena uma \mbox{\hyperlink{structInstruction}{Instruction}}. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Macros}
 \begin{DoxyCompactItemize}
 \item 
@@ -153,7 +153,7 @@ struct \mbox{\hyperlink{structInstruction}{Instruction}}
 \item 
 \mbox{\Hypertarget{instruction_8hpp_a36bbd4522e8a1929f0a16b626c4d9161}\label{instruction_8hpp_a36bbd4522e8a1929f0a16b626c4d9161}} 
 typedef struct \mbox{\hyperlink{structInstruction}{Instruction}} \mbox{\hyperlink{instruction_8hpp_a36bbd4522e8a1929f0a16b626c4d9161}{Instruction}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structInstruction}{Instruction}} -\/ Estrutura de dados que armazena uma \mbox{\hyperlink{structInstruction}{Instruction}}. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena uma \mbox{\hyperlink{structInstruction}{Instruction}}. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Funções}
 \begin{DoxyCompactItemize}
 \item 
