--- a/latex/interface__info_8hpp.tex
+++ b/latex/interface__info_8hpp.tex
@@ -10,13 +10,13 @@ Estruturas e declarações de funções que leem as interfaces do arquivo e as a
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structInterface__Info}{Interface\+\_\+\+Info}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structInterface__Info}{Interface\+\_\+\+Info}} -\/ Estrutura de dados que armazena a tabela de interfaces. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena a tabela de Interfaces. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Definições de tipos}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{interface__info_8hpp_ad68af501934e945d193776a0504a4438}\label{interface__info_8hpp_ad68af501934e945d193776a0504a4438}} 
 typedef struct \mbox{\hyperlink{structInterface__Info}{Interface\+\_\+\+Info}} \mbox{\hyperlink{interface__info_8hpp_ad68af501934e945d193776a0504a4438}{Interface\+\_\+\+Info}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structInterface__Info}{Interface\+\_\+\+Info}} -\/ Estrutura de dados que armazena a tabela de interfaces. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura de dados que armazena a tabela de Interfaces. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Funções}
 \begin{DoxyCompactItemize}
 \item 
