--- a/latex/method__info_8hpp.tex
+++ b/latex/method__info_8hpp.tex
@@ -11,13 +11,13 @@ Estruturas e declarações de funções relacionadas a Method.
 \begin{DoxyCompactItemize}
 \item 
 struct \mbox{\hyperlink{structMethod__Info}{Method\+\_\+\+Info}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structMethod__Info}{Method\+\_\+\+Info}} -\/ Estrutura que armazena o Method. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura que armazena o Method. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Definições de tipos}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{method__info_8hpp_ab520d4c9cd668cce3af4f6c7494fa124}\label{method__info_8hpp_ab520d4c9cd668cce3af4f6c7494fa124}} 
 typedef struct \mbox{\hyperlink{structMethod__Info}{Method\+\_\+\+Info}} \mbox{\hyperlink{method__info_8hpp_ab520d4c9cd668cce3af4f6c7494fa124}{Method\+\_\+\+Info}}
-\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{structMethod__Info}{Method\+\_\+\+Info}} -\/ Estrutura que armazena o Method. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Estrutura que armazena o Method. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Funções}
 \begin{DoxyCompactItemize}
 \item 
