--- a/latex/structArray__Type.tex
+++ b/latex/structArray__Type.tex
@@ -2,7 +2,7 @@
 \label{structArray__Type}\index{Array\_Type@{Array\_Type}}
 
 
-\mbox{\hyperlink{structArray__Type}{Array\+\_\+\+Type}} -\/ Estrutura de dados que armazena o tipo do operando.  
+Estrutura de dados que armazena o tipo do operando.  
 
 
 
@@ -18,7 +18,7 @@ std\+::vector$<$ \mbox{\hyperlink{structOperand}{Operand}} $\ast$ $>$ $\ast$ {\b
 
 
 \doxysubsection{Descrição detalhada}
-\mbox{\hyperlink{structArray__Type}{Array\+\_\+\+Type}} -\/ Estrutura de dados que armazena o tipo do operando. 
+Estrutura de dados que armazena o tipo do operando. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
