--- a/latex/structAttribute__Info.tex
+++ b/latex/structAttribute__Info.tex
@@ -2,7 +2,7 @@
 \label{structAttribute__Info}\index{Attribute\_Info@{Attribute\_Info}}
 
 
-\mbox{\hyperlink{structAttribute__Info}{Attribute\+\_\+\+Info}} -\/ Estrutura de dados.  
+Estrutura de dados de um Attribute.  
 
 
 
@@ -42,7 +42,7 @@ u1 $\ast$ {\bfseries info} = nullptr
 
 
 \doxysubsection{Descrição detalhada}
-\mbox{\hyperlink{structAttribute__Info}{Attribute\+\_\+\+Info}} -\/ Estrutura de dados. 
+Estrutura de dados de um Attribute. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
