--- a/latex/structClass__File.tex
+++ b/latex/structClass__File.tex
@@ -2,7 +2,7 @@
 \label{structClass__File}\index{Class\_File@{Class\_File}}
 
 
-\mbox{\hyperlink{structClass__File}{Class\+\_\+\+File}} -\/ Estrutura de dados que armazena as principais informações do bytecode (.class)  
+Estrutura de dados que armazena as principais informações do bytecode (.class)  
 
 
 
@@ -63,7 +63,7 @@ u2 {\bfseries attributes\+\_\+count}
 
 
 \doxysubsection{Descrição detalhada}
-\mbox{\hyperlink{structClass__File}{Class\+\_\+\+File}} -\/ Estrutura de dados que armazena as principais informações do bytecode (.class) 
+Estrutura de dados que armazena as principais informações do bytecode (.class) 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
