--- a/latex/structInstruction.tex
+++ b/latex/structInstruction.tex
@@ -2,7 +2,7 @@
 \label{structInstruction}\index{Instruction@{Instruction}}
 
 
-\mbox{\hyperlink{structInstruction}{Instruction}} -\/ Estrutura de dados que armazena uma \mbox{\hyperlink{structInstruction}{Instruction}}.  
+Estrutura de dados que armazena uma \mbox{\hyperlink{structInstruction}{Instruction}}.  
 
 
 
@@ -21,7 +21,7 @@ u4 {\bfseries bytes}
 
 
 \doxysubsection{Descrição detalhada}
-\mbox{\hyperlink{structInstruction}{Instruction}} -\/ Estrutura de dados que armazena uma \mbox{\hyperlink{structInstruction}{Instruction}}. 
+Estrutura de dados que armazena uma \mbox{\hyperlink{structInstruction}{Instruction}}. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
