--- a/latex/structLine__Number__Table__Attribute.tex
+++ b/latex/structLine__Number__Table__Attribute.tex
@@ -2,7 +2,7 @@
 \label{structLine__Number__Table__Attribute}\index{Line\_Number\_Table\_Attribute@{Line\_Number\_Table\_Attribute}}
 
 
-Estrutura de dados.  
+Estrutura de dados que armazena a quantidade de linhas da tabela de um Attribute e contém um ponteiro para uma das linhas.  
 
 
 
@@ -21,7 +21,7 @@ u2 {\bfseries line\+\_\+number\+\_\+table\+\_\+length}
 
 
 \doxysubsection{Descrição detalhada}
-Estrutura de dados. 
+Estrutura de dados que armazena a quantidade de linhas da tabela de um Attribute e contém um ponteiro para uma das linhas. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
