--- a/latex/structLine__Number__Table__Data.tex
+++ b/latex/structLine__Number__Table__Data.tex
@@ -2,7 +2,7 @@
 \label{structLine__Number__Table__Data}\index{Line\_Number\_Table\_Data@{Line\_Number\_Table\_Data}}
 
 
-Estrutura de dados que armazena o PC e o número da linha da tabela.  
+Estrutura de dados que armazena o pointer counter e o número da linha de início da tabela de um Attribute.  
 
 
 
@@ -21,7 +21,7 @@ u2 {\bfseries line\+\_\+number}
 
 
 \doxysubsection{Descrição detalhada}
-Estrutura de dados que armazena o PC e o número da linha da tabela. 
+Estrutura de dados que armazena o pointer counter e o número da linha de início da tabela de um Attribute. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
