--- a/latex/structLocal__Variable__Table__Attribute.tex
+++ b/latex/structLocal__Variable__Table__Attribute.tex
@@ -2,7 +2,7 @@
 \label{structLocal__Variable__Table__Attribute}\index{Local\_Variable\_Table\_Attribute@{Local\_Variable\_Table\_Attribute}}
 
 
-\mbox{\hyperlink{structLocal__Variable__Table__Attribute}{Local\+\_\+\+Variable\+\_\+\+Table\+\_\+\+Attribute}} -\/ Estrutura de dados.  
+Estrutura de dados que armazena a tabela de um Attribute.  
 
 
 
@@ -21,7 +21,7 @@ u2 {\bfseries local\+\_\+variable\+\_\+table\+\_\+length}
 
 
 \doxysubsection{Descrição detalhada}
-\mbox{\hyperlink{structLocal__Variable__Table__Attribute}{Local\+\_\+\+Variable\+\_\+\+Table\+\_\+\+Attribute}} -\/ Estrutura de dados. 
+Estrutura de dados que armazena a tabela de um Attribute. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
