--- a/latex/structLocal__Variable__Table__Data.tex
+++ b/latex/structLocal__Variable__Table__Data.tex
@@ -2,7 +2,7 @@
 \label{structLocal__Variable__Table__Data}\index{Local\_Variable\_Table\_Data@{Local\_Variable\_Table\_Data}}
 
 
-\mbox{\hyperlink{structLocal__Variable__Table__Data}{Local\+\_\+\+Variable\+\_\+\+Table\+\_\+\+Data}} -\/ Estrutura de dados.  
+Estrutura de dados com variáveis locais da tabela de um Attribute.  
 
 
 
@@ -30,7 +30,7 @@ u2 {\bfseries index}
 
 
 \doxysubsection{Descrição detalhada}
-\mbox{\hyperlink{structLocal__Variable__Table__Data}{Local\+\_\+\+Variable\+\_\+\+Table\+\_\+\+Data}} -\/ Estrutura de dados. 
+Estrutura de dados com variáveis locais da tabela de um Attribute. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
