--- a/latex/structOperand.tex
+++ b/latex/structOperand.tex
@@ -2,7 +2,7 @@
 \label{structOperand}\index{Operand@{Operand}}
 
 
-\mbox{\hyperlink{structOperand}{Operand}} -\/ Estrutura de dados que armazena um operando.  
+Estrutura de dados que armazena um operando.  
 
 
 
@@ -36,7 +36,7 @@ union \{\\
 
 
 \doxysubsection{Descrição detalhada}
-\mbox{\hyperlink{structOperand}{Operand}} -\/ Estrutura de dados que armazena um operando. 
+Estrutura de dados que armazena um operando. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
