--- a/latex/structSource__File__Attribute.tex
+++ b/latex/structSource__File__Attribute.tex
@@ -2,7 +2,7 @@
 \label{structSource__File__Attribute}\index{Source\_File\_Attribute@{Source\_File\_Attribute}}
 
 
-Estrutura de dados que armazena o código do Attribute.  
+Estrutura de dados que armazena o código de um Attribute.  
 
 
 
@@ -18,7 +18,7 @@ u2 {\bfseries source\+\_\+file\+\_\+index}
 
 
 \doxysubsection{Descrição detalhada}
-Estrutura de dados que armazena o código do Attribute. 
+Estrutura de dados que armazena o código de um Attribute. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
