--- a/latex/structException.tex
+++ b/latex/structException.tex
@@ -2,7 +2,7 @@
 \label{structException}\index{Exception@{Exception}}
 
 
-Estrutura de dados que armazena o número de exceções e um ponteiro para cada uma delas.  
+Estrutura de dados que armazena o número de exceções de um Attribute e um ponteiro para cada uma delas.  
 
 
 
@@ -21,7 +21,7 @@ u2 $\ast$ {\bfseries exception\+\_\+index\+\_\+table}
 
 
 \doxysubsection{Descrição detalhada}
-Estrutura de dados que armazena o número de exceções e um ponteiro para cada uma delas. 
+Estrutura de dados que armazena o número de exceções de um Attribute e um ponteiro para cada uma delas. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
