--- a/latex/structField__Info.tex
+++ b/latex/structField__Info.tex
@@ -2,7 +2,7 @@
 \label{structField__Info}\index{Field\_Info@{Field\_Info}}
 
 
-\mbox{\hyperlink{structField__Info}{Field\+\_\+\+Info}} -\/ estrutura de dados que armazena os Fields.  
+Estrutura de dados que armazena os Fields.  
 
 
 
@@ -30,7 +30,7 @@ u2 {\bfseries atributes\+\_\+count}
 
 
 \doxysubsection{Descrição detalhada}
-\mbox{\hyperlink{structField__Info}{Field\+\_\+\+Info}} -\/ estrutura de dados que armazena os Fields. 
+Estrutura de dados que armazena os Fields. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
