--- a/latex/structInterface__Info.tex
+++ b/latex/structInterface__Info.tex
@@ -2,7 +2,7 @@
 \label{structInterface__Info}\index{Interface\_Info@{Interface\_Info}}
 
 
-\mbox{\hyperlink{structInterface__Info}{Interface\+\_\+\+Info}} -\/ Estrutura de dados que armazena a tabela de interfaces.  
+Estrutura de dados que armazena a tabela de Interfaces.  
 
 
 
@@ -18,7 +18,7 @@ u2 {\bfseries interface\+\_\+table}
 
 
 \doxysubsection{Descrição detalhada}
-\mbox{\hyperlink{structInterface__Info}{Interface\+\_\+\+Info}} -\/ Estrutura de dados que armazena a tabela de interfaces. 
+Estrutura de dados que armazena a tabela de Interfaces. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
