--- a/latex/structMethod__Info.tex
+++ b/latex/structMethod__Info.tex
@@ -2,7 +2,7 @@
 \label{structMethod__Info}\index{Method\_Info@{Method\_Info}}
 
 
-\mbox{\hyperlink{structMethod__Info}{Method\+\_\+\+Info}} -\/ Estrutura que armazena o Method.  
+Estrutura que armazena o Method.  
 
 
 
@@ -30,7 +30,7 @@ u2 {\bfseries attributes\+\_\+count}
 
 
 \doxysubsection{Descrição detalhada}
-\mbox{\hyperlink{structMethod__Info}{Method\+\_\+\+Info}} -\/ Estrutura que armazena o Method. 
+Estrutura que armazena o Method. 
 
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
