update docs: how to add test files

--- a/mainpage.dox
+++ b/mainpage.dox
@@ -51,7 +51,7 @@
  *
  * ## Leitor e Exibidor
  *
- * Exibe o bytecode do arquivo .class
+ * Exibe o bytecode do arquivo .class (flag -e)
  *
  * ``` bash
  * # Linux e Windows
@@ -63,7 +63,7 @@
  *
  * ## Interpretador JVM
  *
- * Interpreta e executa o arquivo .class
+ * Interpreta e executa o arquivo .class (flag -i)
  *
  * ``` bash
  * # Linux e Windows
@@ -71,6 +71,19 @@
  *
  * # Bash script
  * $ ./jvm.sh HelloJava
+ * ```
+ * ## Arquivos Teste
+ *
+ * Arquivos java (.java) encontram-se na pasta test/java e arquivos de classe (.class) encontram-se na pasta test/class.
+ *
+ * Para adicionar mais arquivos classe de teste, basta inserir o arquivo.java no diretorio test/java e executar na pasta raiz do projeto o comando:
+ * 
+ * ``` bash
+ * # Linux e Windows
+ * $ java test/java/arquivo.java -d test/class
+ * 
+ * # Bash script
+ * $  javac.sh arquivo
  * ```
  *
  * ## Classes Java (.class) de Teste
