update docs + Makefile

--- a/mainpage.dox
+++ b/mainpage.dox
@@ -14,6 +14,67 @@
  *
  * <img src="https://github.com/GuiCoelhoDev/jvm_boss/raw/master/diagrama.png" width="90%" />
  *
+ * # Compilando
+ * 
+ * Forma manual
+ * 
+ * ``` bash
+ * # cria pasta build
+ * mkdir -p build 
+ * cd build
+ * 
+ * # executa o cmake dentro da pasta build
+ * cmake .. -G "Unix Makefiles"
+ * 
+ * # executa o make dentro de build
+ * make
+ * 
+ * # volta para diretório raiz do projeto
+ * cd ..
+ * 
+ * ```
+ * 
+ * Utilizando script shell
+ *
+ * ``` bash
+ * # Linux
+ * $ ./compile.sh -l
+ * 
+ * # Windows
+ * $ ./compile.sh -w
+ * ```
+ *
+ * Caso apresente erro de formatação de arquivos de shell script ``.sh`` no Linux, usar o comando 
+ *
+ * ```bash
+ * $ sed -i 's/\r$//' scriptname.sh
+ * ```
+ * 
+ * # Executando
+ *
+ * ## Leitor e Exibidor
+ *
+ * Exibe o bytecode do arquivo .class (flag -e)
+ *
+ * ``` bash
+ * # Linux e Windows
+ * $ ./jvm_boss -e test/HelloJava.class
+ *
+ * # shell script
+ * $ ./read.sh HelloJava
+ * ```
+ *
+ * ## Interpretador JVM
+ *
+ * Interpreta e executa o arquivo .class (flag -i)
+ *
+ * ``` bash
+ * # Linux e Windows
+ * $ ./jvm_boss -i test/HelloJava.class
+ *
+ * # shell script
+ * $ ./jvm.sh HelloJava
+ * ```
  * ## Compilação e informações com javac/javap
  *
  * Compila arquivo ``.java`` para ``.class``
@@ -31,47 +92,6 @@
  * $ javap -v HelloJava.class
  * ```
  *
- * # Compilando
- *
- * ``` bash
- * # Linux
- * $ ./compile.sh -l
- * 
- * # Windows
- * $ ./compile.sh -w
- * ```
- *
- * Caso apresente erro de formatação de arquivos bash ``.sh`` no Linux, usar o comando 
- *
- * ```bash
- * $ sed -i 's/\r$//' scriptname.sh
- * ```
- * 
- * # Executando
- *
- * ## Leitor e Exibidor
- *
- * Exibe o bytecode do arquivo .class (flag -e)
- *
- * ``` bash
- * # Linux e Windows
- * $ ./jvm_boss -e test/HelloJava.class
- *
- * # Bash script
- * $ ./read.sh HelloJava
- * ```
- *
- * ## Interpretador JVM
- *
- * Interpreta e executa o arquivo .class (flag -i)
- *
- * ``` bash
- * # Linux e Windows
- * $ ./jvm_boss -i test/HelloJava.class
- *
- * # Bash script
- * $ ./jvm.sh HelloJava
- * ```
  * ## Arquivos Teste
  *
  * Arquivos java (.java) encontram-se na pasta test/java e arquivos de classe (.class) encontram-se na pasta test/class.
@@ -82,7 +102,7 @@
  * # Linux e Windows
  * $ java test/java/arquivo.java -d test/class
  * 
- * # Bash script
+ * # shell script
  * $  javac.sh arquivo
  * ```
  *
@@ -159,7 +179,7 @@
  * # todos arquivos .cpp dentro de src
  * $ cppcheck --verbose --enable=warning ./src/*.cpp
  *
- * # ou com bash script
+ * # ou com shell script
  * $ ./check.sh -v main
  * $ ./check.sh -w main
  * $ ./check.sh -all
@@ -181,7 +201,7 @@
  * # com mais detalhes sobre vazamento de memória
  * $ valgrind –leak-check=full ./jvm_boss -e test/HelloJava.class
  *
- * # bash script
+ * # shell script
  * $ ./valgrind.sh HelloJava
  * ```
  * ## Documentação
